hphp/test/quick/verify-param-type.php.expectf
vec(6) {
  int(2)
  string(59) "Argument 1 to test_soft() must be of type @int, float given"
  string(%d) "%s/test/quick/verify-param-type.php"
  int(22)
  dict(0) {
  }
  vec(2) {
    dict(2) {
      ["file"]=>
      string(%d) "%s/test/quick/verify-param-type.php"
      ["line"]=>
      int(22)
    }
    dict(1) {
      ["function"]=>
      string(4) "main"
    }
  }
}
in test_soft
bool(false)
vec(6) {
  int(4096)
  string(72) "Argument 1 passed to test_hard() must be an instance of int, float given"
  string(%d) "%s/test/quick/verify-param-type.php"
  int(23)
  dict(0) {
  }
  vec(2) {
    dict(2) {
      ["file"]=>
      string(%d) "%s/test/quick/verify-param-type.php"
      ["line"]=>
      int(23)
    }
    dict(1) {
      ["function"]=>
      string(4) "main"
    }
  }
}

Fatal error: Error handler tried to recover from typehint violation in %s/test/quick/verify-param-type.php on line 23
